--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,32 +12,19 @@
     />
     <meta name="author" content="Creative Tim" />
     <title>Node APP</title>
-    <!-- Favicon -->
-    <!-- <link href="img/brand/favicon.png" rel="icon" type="image/png"> -->
-    <!-- Fonts -->
+    <!-- Custom fonts for this template-->
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
+      href="vendor/fontawesome-free/css/all.min.css"
       rel="stylesheet"
-    />
-    <!-- Icons -->
-    <link href="/vendor/nucleo/css/nucleo.css" rel="stylesheet" />
-    <link href="/vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link
-      href="/vendor/@fortawesome/fontawesome-free/css/all.min.css"
-      rel="stylesheet"
-    />
-    <link
       type="text/css"
-      href="/css/style.min.css?v=1.0.0"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
       rel="stylesheet"
     />
 
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    /> -->
+    <!-- Custom styles for this template-->
+    <link href="css/sb-admin-2.min.css" rel="stylesheet" />
 
     <link
       rel="stylesheet"
@@ -46,7 +33,13 @@
   </head>
   <%- body %>
 
-  <script src="https://unpkg.com/jodit@3.24.2/build/jodit.es2018.min.js"></script>
-  <script src="/js/index.js"></script>
-  <script src="/js/app.js"></script>
+  <!-- Bootstrap core JavaScript-->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Core plugin JavaScript-->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom scripts for all pages-->
+  <script src="js/sb-admin-2.min.js"></script>
 </html>
