--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,37 +1,67 @@
-<body>
-    <div class="card container p-5">
-      <h1 class="text-center" style="margin-bottom: 1rem;">Login to dashboard </h1>
-      <form action="/api/auth/login" method="POST" id="loginForm">
-  
-        <div class="form-group">
-          <div class="input-group input-group-alternative mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text"><i class="ni ni-email-83"></i></span>
-            </div>
-            <input type="email" class="form-control" name="email" />
+<body class="bg-gradient-primary">
+
+  <div class="container">
+
+      <!-- Outer Row -->
+      <div class="row justify-content-center">
+
+          <div class="col-xl-10 col-lg-12 col-md-9">
+
+              <div class="card o-hidden border-0 shadow-lg my-5">
+                  <div class="card-body p-0">
+                      <!-- Nested Row within Card Body -->
+                      <div class="row">
+                          <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                          <div class="col-lg-6">
+                              <div class="p-5">
+                                  <div class="text-center">
+                                      <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                                  </div>
+                                  <form class="user">
+                                      <div class="form-group">
+                                          <input type="email" class="form-control form-control-user"
+                                              id="exampleInputEmail" aria-describedby="emailHelp"
+                                              placeholder="Enter Email Address...">
+                                      </div>
+                                      <div class="form-group">
+                                          <input type="password" class="form-control form-control-user"
+                                              id="exampleInputPassword" placeholder="Password">
+                                      </div>
+                                      <div class="form-group">
+                                          <div class="custom-control custom-checkbox small">
+                                              <input type="checkbox" class="custom-control-input" id="customCheck">
+                                              <label class="custom-control-label" for="customCheck">Remember
+                                                  Me</label>
+                                          </div>
+                                      </div>
+                                      <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                          Login
+                                      </a>
+                                      <hr>
+                                      <a href="index.html" class="btn btn-google btn-user btn-block">
+                                          <i class="fab fa-google fa-fw"></i> Login with Google
+                                      </a>
+                                      <a href="index.html" class="btn btn-facebook btn-user btn-block">
+                                          <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
+                                      </a>
+                                  </form>
+                                  <hr>
+                                  <div class="text-center">
+                                      <a class="small" href="forgot-password.html">Forgot Password?</a>
+                                  </div>
+                                  <div class="text-center">
+                                      <a class="small" href="register.html">Create an Account!</a>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+
           </div>
-        </div>
-        <div class="form-group">
-          <div class="input-group input-group-alternative mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text"
-                ><i class="ni ni-lock-circle-open"></i
-              ></span>
-            </div>
-            <input type="password" name="password" class="form-control" />
-          </div>
-        </div>
-  
-        <div class="text-center">
-          <button
-            class="btn btn-primary mt-4"
-            type="button"
-            onclick="loginAndRedirect()"
-          >
-            Login
-          </button>
-        </div>
-      </form>
-    </div>
-  </body>
-  
+
+      </div>
+
+  </div>
+
+</body>
