styling theme done

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,8 +10,8 @@
       name="description"
       content="Start your development with a Dashboard for Node.js."
     />
-    <meta name="author" content="Creative Tim" />
-    <title>Node APP</title>
+    <meta name="author" content="Vijeth Simha" />
+    <title>Education Organiser APP</title>
     <!-- Custom fonts for this template-->
     <link
       href="vendor/fontawesome-free/css/all.min.css"
