login functionality done

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -13,10 +13,11 @@
                   <div class="text-center">
                     <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                   </div>
-                  <form class="user">
+                  <form class="user" id="loginForm">
                     <div class="form-group">
                       <input
                         type="email"
+                        name="email"
                         class="form-control form-control-user"
                         id="exampleInputEmail"
                         aria-describedby="emailHelp"
@@ -26,6 +27,7 @@
                     <div class="form-group">
                       <input
                         type="password"
+                        name="password"
                         class="form-control form-control-user"
                         id="exampleInputPassword"
                         placeholder="Password"
@@ -44,6 +46,7 @@
                       </div>
                     </div>
                     <button
+                    type="button"
                       class="btn btn-primary btn-user btn-block"
                       onclick="loginAndRedirect()"
                     >
