category view added

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -33,7 +33,7 @@
 
   <!-- Nav Item - Pages Collapse Menu -->
   <li class="nav-item active">
-    <a class="nav-link" href="index.html">
+    <a class="nav-link" href="/category">
       <i class="fas fa-fw fa-tachometer-alt"></i>
       <span>Category</span></a
     >
