category view styling done

--- a/views/pages/category/category-view.ejs
+++ b/views/pages/category/category-view.ejs
@@ -17,27 +17,57 @@
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
 
-                    <!-- Page Heading -->
-                    <div class="card shadow mb-4">
-                        <div class="card-header py-3">
-                          <h6 class="m-0 font-weight-bold text-primary">
-                            Create Category
-                          </h6>
+                <!-- DataTales Example -->
+                <div class="card shadow mb-4">
+                    <div class="card-header d-flex justify-content-between py-3">
+                        <h6 class="m-0  align-self-center font-weight-bold text-primary">DataTables Example</h6>
+                        <a href="/category/create-category/" class="btn btn-primary btn-icon-split">
+                            <span class="text">Create Category</span>
+                        </a>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                <thead>
+                                    <tr>
+                                        <th>Name</th>
+                                        <th>Position</th>
+                                        <th>Office</th>
+                                        <th>Age</th>
+                                        <th>Start date</th>
+                                        <th>Salary</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Tiger Nixon</td>
+                                        <td>System Architect</td>
+                                        <td>Edinburgh</td>
+                                        <td>61</td>
+                                        <td>2011/04/25</td>
+                                        <td>$320,800</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Garrett Winters</td>
+                                        <td>Accountant</td>
+                                        <td>Tokyo</td>
+                                        <td>63</td>
+                                        <td>2011/07/25</td>
+                                        <td>$170,750</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Ashton Cox</td>
+                                        <td>Junior Technical Author</td>
+                                        <td>San Francisco</td>
+                                        <td>66</td>
+                                        <td>2009/01/12</td>
+                                        <td>$86,000</td>
+                                    </tr>   
+                                </tbody>
+                            </table>
                         </div>
-                        <div class="card-body">
-                          <p>
-                            SB Admin 2 makes extensive use of Bootstrap 4 utility
-                            classes in order to reduce CSS bloat and poor page
-                            performance. Custom CSS classes are used to create custom
-                            components and custom utility classes.
-                          </p>
-                          <p class="mb-0">
-                            Before working with this theme, you should become familiar
-                            with the Bootstrap framework, especially the utility
-                            classes.
-                          </p>
-                        </div>
-                      </div>
+                    </div>
+                </div>
 
                 </div>
                 <!-- /.container-fluid -->
@@ -60,6 +90,7 @@
 
     </div>
     <!-- End of Page Wrapper -->
+
 
 
 </body>
