styling file input

--- a/views/pages/category/create-category.ejs
+++ b/views/pages/category/create-category.ejs
@@ -1,5 +1,4 @@
 <body id="page-top">
-
     <!-- Page Wrapper -->
     <div id="wrapper">
         <%- include ("../../partials/sidebar") %>
@@ -25,17 +24,55 @@
                           </h6>
                         </div>
                         <div class="card-body">
-                          <p>
-                            SB Admin 2 makes extensive use of Bootstrap 4 utility
-                            classes in order to reduce CSS bloat and poor page
-                            performance. Custom CSS classes are used to create custom
-                            components and custom utility classes.
-                          </p>
-                          <p class="mb-0">
-                            Before working with this theme, you should become familiar
-                            with the Bootstrap framework, especially the utility
-                            classes.
-                          </p>
+                          <form class="user" id="loginForm">
+                            <div class="row">
+                              <div class="col-md-6">
+                                <div class="form-group">
+                                  <label for="categoryTitle">Category Title</label>
+                                  <input
+                                    type="text"
+                                    name="title"
+                                    class="form-control form-control-user"
+                                    id="categoryTitle"
+                                    aria-describedby="emailHelp"
+                                    placeholder="Enter title"
+                                  />
+                                </div>
+                                
+                              </div>
+                              <div class="col-md-6">
+                                <div class="form-group">
+                                  <label for="categoryPic">Short Description</label>
+                                  <input
+                                    type="text"
+                                    name="categoryPic"
+                                    class="form-control"
+                                    id="categoryPic"
+                                    placeholder="Password"
+                                  />
+                                </div>
+                              </div>
+                            </div>
+                            <div class="row">
+                              <div class="col-md-12">
+                                <!-- <label for="shortDescription">Category pic</label> -->
+                                <input
+                                    type="file"
+                                    name="categoryPic"
+                                    id="shortDescription"
+                                    placeholder="Password"
+                                  />
+                              </div>
+                            </div>
+                            <button
+                            type="button"
+                              class="btn btn-primary btn-user btn-block"
+                              onclick="loginAndRedirect()"
+                            >
+                              Login
+                            </button>
+                            <hr />
+                          </form>
                         </div>
                       </div>
 
