--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -86,7 +86,7 @@
     };
 
     const postLoginData = async (email, password) => {
-      const response = await fetch("/api/auth/login", {
+      const response = await fetch("/api/v1/auth/login", {
         method: "POST",
         headers: {
           Accept: "application/json",
