--- a/views/pages/category/category-view.ejs
+++ b/views/pages/category/category-view.ejs
@@ -1,96 +1,77 @@
 <body id="page-top">
+  <!-- Page Wrapper -->
+  <div id="wrapper">
+    <%- include ("../../partials/sidebar") %>
 
-    <!-- Page Wrapper -->
-    <div id="wrapper">
-        <%- include ("../../partials/sidebar") %>
+    <!-- Content Wrapper -->
+    <div id="content-wrapper" class="d-flex flex-column">
+      <!-- Main Content -->
+      <div id="content">
+        <%- include ("../../partials/top-navbar") %>
 
-
-        <!-- Content Wrapper -->
-        <div id="content-wrapper" class="d-flex flex-column">
-
-            <!-- Main Content -->
-            <div id="content">
-
-                <%- include ("../../partials/top-navbar") %>
-
-            
-                <!-- Begin Page Content -->
-                <div class="container-fluid">
-
-                <!-- DataTales Example -->
-                <div class="card shadow mb-4">
-                    <div class="card-header d-flex justify-content-between py-3">
-                        <h6 class="m-0  align-self-center font-weight-bold text-primary">DataTables Example</h6>
-                        <a href="/category/create-category/" class="btn btn-primary btn-icon-split">
-                            <span class="text">Create Category</span>
-                        </a>
-                    </div>
-                    <div class="card-body">
-                        <div class="table-responsive">
-                            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                                <thead>
-                                    <tr>
-                                        <th>Name</th>
-                                        <th>Position</th>
-                                        <th>Office</th>
-                                        <th>Age</th>
-                                        <th>Start date</th>
-                                        <th>Salary</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>Tiger Nixon</td>
-                                        <td>System Architect</td>
-                                        <td>Edinburgh</td>
-                                        <td>61</td>
-                                        <td>2011/04/25</td>
-                                        <td>$320,800</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Garrett Winters</td>
-                                        <td>Accountant</td>
-                                        <td>Tokyo</td>
-                                        <td>63</td>
-                                        <td>2011/07/25</td>
-                                        <td>$170,750</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Ashton Cox</td>
-                                        <td>Junior Technical Author</td>
-                                        <td>San Francisco</td>
-                                        <td>66</td>
-                                        <td>2009/01/12</td>
-                                        <td>$86,000</td>
-                                    </tr>   
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-
-                </div>
-                <!-- /.container-fluid -->
-
+        <!-- Begin Page Content -->
+        <div class="container-fluid">
+          <!-- DataTales Example -->
+          <div class="card shadow mb-4">
+            <div class="card-header d-flex justify-content-between py-3">
+              <h6 class="m-0 align-self-center font-weight-bold text-primary">
+                DataTables Example
+              </h6>
+              <a
+                href="/category/create-category/"
+                class="btn btn-primary btn-icon-split"
+              >
+                <span class="text">Create Category</span>
+              </a>
             </div>
-            <!-- End of Main Content -->
-
-            <!-- Footer -->
-            <footer class="sticky-footer bg-white">
-                <div class="container my-auto">
-                    <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2020</span>
-                    </div>
-                </div>
-            </footer>
-            <!-- End of Footer -->
-
+            <div class="card-body">
+              <div class="table-responsive">
+                <table
+                  class="table"
+                  id="dataTable"
+                  width="100%"
+                  cellspacing="0"
+                >
+                  <thead>
+                    <tr>
+                      <th>Category Pic</th>
+                      <th>Title</th>
+                      <th>Created On</th>
+                      <th>Short Description</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <% if(categories.length > 0) { %> <% categories.forEach(category =>
+                    { %>
+                    <tr>
+                      <td><img class="img-profile rounded-circle custom-img"
+                        src="../img/category-images/<%- category.categoryPic %>"></td>
+                      <td><%- category.title %></td>
+                      <td><%- category.createdAt %></td>
+                      <td><%- category.shortDescription %></td>
+                    </tr>
+                    <%})%> <% } %>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
         </div>
-        <!-- End of Content Wrapper -->
+        <!-- /.container-fluid -->
+      </div>
+      <!-- End of Main Content -->
 
+      <!-- Footer -->
+      <footer class="sticky-footer bg-white">
+        <div class="container my-auto">
+          <div class="copyright text-center my-auto">
+            <span>Copyright &copy; Your Website 2020</span>
+          </div>
+        </div>
+      </footer>
+      <!-- End of Footer -->
     </div>
-    <!-- End of Page Wrapper -->
-
-
-
+    <!-- End of Content Wrapper -->
+  </div>
+  <!-- End of Page Wrapper -->
 </body>
