top nav cleaning

--- a/views/pages/category/category-view.ejs
+++ b/views/pages/category/category-view.ejs
@@ -15,7 +15,7 @@
           <div class="card shadow mb-4">
             <div class="card-header d-flex justify-content-between py-3">
               <h6 class="m-0 align-self-center font-weight-bold text-primary">
-                DataTables Example
+                Categories
               </h6>
               <a
                 href="/category/create-category/"
