started with ejs

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -39,6 +39,19 @@
     >
   </li>
 
+  <li class="nav-item active">
+    <a class="nav-link" href="/semester">
+      <i class="fas fa-fw fa-tachometer-alt"></i>
+      <span>Semester</span></a
+    >
+  </li>
+  <li class="nav-item active">
+    <a class="nav-link" href="/subject">
+      <i class="fas fa-fw fa-tachometer-alt"></i>
+      <span>Subject</span></a
+    >
+  </li>
+
   <!-- <li class="nav-item">
     <a
       class="nav-link collapsed"
