--- a/views/pages/subject/create-subject.ejs
+++ b/views/pages/subject/create-subject.ejs
@@ -17,7 +17,7 @@
               <h6 class="m-0 font-weight-bold text-primary">Create Subject</h6>
             </div>
             <div class="card-body">
-              <form class="user" id="categoryForm">
+              <form class="user" id="subjectForm">
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
@@ -61,7 +61,7 @@
                 <button
                   type="button"
                   class="btn btn-primary btn-user btn-block"
-                  onclick="createCategory()"
+                  onclick="createSubject()"
                 >
                   Create Category
                 </button>
@@ -89,20 +89,20 @@
   <!-- End of Page Wrapper -->
 
   <script>
-    const createCategory = () => {
-      const formElement = document.querySelector("#categoryForm");
+    const createSubject = () => {
+      const formElement = document.querySelector("#subjectForm");
       const formData = new FormData(formElement);
-      postCategoryData(formData).then(async (response) => {
+      postSubjectData(formData).then(async (response) => {
         if (response.status === 200) {
           window.location.href = "/category";
         }
       });
     };
 
-    const postCategoryData = async (categoryData) => {
+    const postSubjectData = async (categoryData) => {
       const { accessToken } = JSON.parse(localStorage.getItem("tokens"));
 
-      const response = await fetch("/api/v1/category/create-category", {
+      const response = await fetch("/api/v1/subject/create-subject", {
         method: "POST",
         headers: {
           Authorization: `Bearer ${accessToken}`,
