--- a/views/pages/semester/semester-view.ejs
+++ b/views/pages/semester/semester-view.ejs
@@ -15,7 +15,7 @@
           <div class="card shadow mb-4">
             <div class="card-header d-flex justify-content-between py-3">
               <h6 class="m-0 align-self-center font-weight-bold text-primary">
-                Categories
+                semestersList
               </h6>
               <a
                 href="/semester/create-semester/"
@@ -41,14 +41,14 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <% if(categories.length > 0) { %> <% categories.forEach(category =>
+                    <% if(semestersList.length > 0) { %> <% semestersList.forEach(semester =>
                     { %>
                     <tr>
                       <td><img class="img-profile rounded-circle custom-img"
-                        src="../img/category-images/<%- category.categoryPic %>"></td>
-                      <td><%- category.title %></td>
-                      <td><%- category.createdAt.toLocaleDateString() %></td>
-                      <td><%- category.shortDescription %></td>
+                        src="../img/semester-images/<%- semester.semesterPic %>"></td>
+                      <td><%- semester.title %></td>
+                      <td><%- semester.createdAt.toLocaleDateString() %></td>
+                      <td><%- semester.shortDescription %></td>
                     </tr>
                     <%})%> <% } %>
                   </tbody>
