--- a/views/pages/semester/create-semester.ejs
+++ b/views/pages/semester/create-semester.ejs
@@ -47,21 +47,27 @@
                 </div>
                 <div class="row mb-2">
                   <div class="col-md-6">
-                    <select name="categories">
-                      <% categoriesList.forEach(category =>
-                      { %>
-                        <options><%- category.id %></options>
-                      <%})%>
-                    </select>
+                    <div class="form-group">
+                      <label for="category">Category </label>
+                        
+                        <select name="category" class="form-control">
+                        <option>choose below</option>
+                        <% categoriesList.forEach(category => { %>
+                        <option value="<%-category.id %>">
+                          <%- category.title %>
+                        </option>
+                        <%})%>
+                      </select>
+                    </div>
                   </div>
                   <div class="col-md-6">
-                    <label for="categoryPic" style="display: block"
+                    <label for="semesterPic" style="display: block"
                       >Semester pic</label
                     >
                     <input
                       type="file"
-                      name="categoryPic"
-                      id="categoryPic"
+                      name="semesterPic"
+                      id="semesterPic"
                       placeholder=""
                     />
                   </div>
@@ -71,7 +77,7 @@
                   class="btn btn-primary btn-user btn-block"
                   onclick="createSemester()"
                 >
-                  Create Category
+                  Create Semester
                 </button>
                 <hr />
               </form>
