--- a/views/pages/subject/create-subject.ejs
+++ b/views/pages/subject/create-subject.ejs
@@ -21,13 +21,13 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label for="categoryTitle">Subject Title</label>
+                      <label for="subjectTitle">Subject Title</label>
                       <input
                         type="text"
                         name="title"
                         class="form-control form-control-user"
-                        id="categoryTitle"
-                        aria-describedby="categoryTitle"
+                        id="subjectTitle"
+                        aria-describedby="subjectTitle"
                         placeholder="Enter title"
                       />
                     </div>
@@ -39,7 +39,6 @@
                         type="text"
                         name="shortDescription"
                         class="form-control"
-                        id="categoryPic"
                         placeholder="Short Decription"
                       />
                     </div>
@@ -47,13 +46,13 @@
                 </div>
                 <div class="row mb-2">
                   <div class="col-md-12">
-                    <label for="categoryPic" style="display: block"
+                    <label for="subjectPic" style="display: block"
                       >Semester pic</label
                     >
                     <input
                       type="file"
-                      name="categoryPic"
-                      id="categoryPic"
+                      name="subjectPic"
+                      id="subjectPic"
                       placeholder=""
                     />
                   </div>
@@ -63,7 +62,7 @@
                   class="btn btn-primary btn-user btn-block"
                   onclick="createSubject()"
                 >
-                  Create Category
+                  Create Subject
                 </button>
                 <hr />
               </form>
