--- a/views/pages/subject/create-subject.ejs
+++ b/views/pages/subject/create-subject.ejs
@@ -93,7 +93,7 @@
       const formData = new FormData(formElement);
       postSubjectData(formData).then(async (response) => {
         if (response.status === 200) {
-          window.location.href = "/category";
+          window.location.href = "/subject";
         }
       });
     };
