--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -33,20 +33,20 @@
 
   <!-- Nav Item - Pages Collapse Menu -->
   <li class="nav-item active">
-    <a class="nav-link" href="/category">
+    <a class="nav-link" href="/categories">
       <i class="fas fa-fw fa-tachometer-alt"></i>
       <span>Category</span></a
     >
   </li>
 
   <li class="nav-item active">
-    <a class="nav-link" href="/semester">
+    <a class="nav-link" href="/semesters">
       <i class="fas fa-fw fa-tachometer-alt"></i>
       <span>Semester</span></a
     >
   </li>
   <li class="nav-item active">
-    <a class="nav-link" href="/subject">
+    <a class="nav-link" href="/subjects">
       <i class="fas fa-fw fa-tachometer-alt"></i>
       <span>Subject</span></a
     >
