--- a/views/pages/lesson/create-lesson.ejs
+++ b/views/pages/lesson/create-lesson.ejs
@@ -17,7 +17,7 @@
               <h6 class="m-0 font-weight-bold text-primary">Create Lesson</h6>
             </div>
             <div class="card-body">
-              <form class="user" id="categoryForm">
+              <form class="user" id="lessonForm">
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
@@ -61,7 +61,7 @@
                 <button
                   type="button"
                   class="btn btn-primary btn-user btn-block"
-                  onclick="createCategory()"
+                  onclick="createLesson()"
                 >
                   Create Category
                 </button>
@@ -89,25 +89,25 @@
   <!-- End of Page Wrapper -->
 
   <script>
-    const createCategory = () => {
-      const formElement = document.querySelector("#categoryForm");
+    const createLesson = () => {
+      const formElement = document.querySelector("#lessonForm");
       const formData = new FormData(formElement);
-      postCategoryData(formData).then(async (response) => {
+      postLessonData(formData).then(async (response) => {
         if (response.status === 200) {
           window.location.href = "/lessons";
         }
       });
     };
 
-    const postCategoryData = async (categoryData) => {
+    const postLessonData = async (lessonData) => {
       const { accessToken } = JSON.parse(localStorage.getItem("tokens"));
 
-      const response = await fetch("/api/v1/category/create-category", {
+      const response = await fetch("/api/v1/category/create-lesson", {
         method: "POST",
         headers: {
           Authorization: `Bearer ${accessToken}`,
         },
-        body: categoryData,
+        body: lessonData,
       });
       return response;
     };
