started with lesson labels getting changed

--- a/views/pages/lesson/create-lesson.ejs
+++ b/views/pages/lesson/create-lesson.ejs
@@ -38,22 +38,22 @@
                       <input
                         type="text"
                         name="shortDescription"
-                        class="form-control"
-                        id="categoryPic"
+                        class="form-control form-control-user"
+                        id="shortDescription"
                         placeholder="Short Decription"
                       />
                     </div>
                   </div>
                 </div>
                 <div class="row mb-2">
-                  <div class="col-md-12">
-                    <label for="categoryPic" style="display: block"
+                  <div class="col-md-6">
+                    <label for="lessonPic" style="display: block"
                       >Category pic</label
                     >
                     <input
                       type="file"
-                      name="categoryPic"
-                      id="categoryPic"
+                      name="lessonPic"
+                      id="lessonPic"
                       placeholder=""
                     />
                   </div>
@@ -63,7 +63,7 @@
                   class="btn btn-primary btn-user btn-block"
                   onclick="createLesson()"
                 >
-                  Create Category
+                  Create Lesson
                 </button>
                 <hr />
               </form>
