--- a/views/pages/lesson/create-lesson.ejs
+++ b/views/pages/lesson/create-lesson.ejs
@@ -47,6 +47,20 @@
                 </div>
                 <div class="row mb-2">
                   <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="category">Which subject are you adding for? </label>
+                        
+                        <select name="category" class="form-control">
+                        <option>choose below</option>
+                        <% subjectsList.forEach(subject => { %>
+                        <option value="<%-subject.id %>">
+                          <%- subject.title %>
+                        </option>
+                        <%})%>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
                     <label for="lessonPic" style="display: block"
                       >Category pic</label
                     >
