--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -51,6 +51,12 @@
       <span>Subject</span></a
     >
   </li>
+  <li class="nav-item active">
+    <a class="nav-link" href="/lessons">
+      <i class="fas fa-fw fa-tachometer-alt"></i>
+      <span>Lesson</span></a
+    >
+  </li>
 
   <!-- <li class="nav-item">
     <a
