lesson glitch is solved

--- a/views/pages/lesson/lesson-view.ejs
+++ b/views/pages/lesson/lesson-view.ejs
@@ -18,7 +18,7 @@
                 View Lessons
               </h6>
               <a
-                href="/subject/create-subject/"
+                href="/lessons/create-lesson/"
                 class="btn btn-primary btn-icon-split"
               >
                 <span class="text">Create Lesson</span>
@@ -41,7 +41,7 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <% if(lessonList.length > 0) { %> <% lessonList.forEach(lesson =>
+                    <% if(lessonsList.length > 0) { %> <% lessonsList.forEach(lesson =>
                     { %>
                     <tr>
                       <td><img class="img-profile rounded-circle custom-img"
