--- a/views/pages/documents/add-document.ejs
+++ b/views/pages/documents/add-document.ejs
@@ -14,14 +14,14 @@
             <!-- Page Heading -->
             <div class="card shadow mb-4">
               <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">Create Lesson</h6>
+                <h6 class="m-0 font-weight-bold text-primary">Create Document</h6>
               </div>
               <div class="card-body">
                 <form class="user" id="documentForm">
                   <div class="row">
                     <div class="col-md-6">
                       <div class="form-group">
-                        <label for="categoryTitle">Lesson Title</label>
+                        <label for="categoryTitle">Document Title</label>
                         <input
                           type="text"
                           name="title"
