--- a/views/pages/documents/documents-view.ejs
+++ b/views/pages/documents/documents-view.ejs
@@ -18,10 +18,10 @@
                   View Documents
                 </h6>
                 <a
-                  href="/subject/create-subject/"
+                  href="/subject/create-documents/"
                   class="btn btn-primary btn-icon-split"
                 >
-                  <span class="text">Create Lesson</span>
+                  <span class="text">Create Documents</span>
                 </a>
               </div>
               <div class="card-body">
