pushed the code

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -57,6 +57,12 @@
       <span>Lesson</span></a
     >
   </li>
+  <li class="nav-item active">
+    <a class="nav-link" href="/documents">
+      <i class="fas fa-fw fa-tachometer-alt"></i>
+      <span>Documents</span></a
+    >
+  </li>
 
   <!-- <li class="nav-item">
     <a
