--- a/views/pages/documents/documents-view.ejs
+++ b/views/pages/documents/documents-view.ejs
@@ -21,7 +21,7 @@
                   href="/documents/add-documents/"
                   class="btn btn-primary btn-icon-split"
                 >
-                  <span class="text">Create Documents</span>
+                  <span class="text">Add Documents</span>
                 </a>
               </div>
               <div class="card-body">
