--- a/views/pages/documents/add-document.ejs
+++ b/views/pages/documents/add-document.ejs
@@ -77,7 +77,7 @@
                     class="btn btn-primary btn-user btn-block"
                     onclick="addDocument()"
                   >
-                    Create Category
+                    Add document
                   </button>
                   <hr />
                 </form>
@@ -108,20 +108,20 @@
         const formData = new FormData(formElement);
         postDocumentData(formData).then(async (response) => {
           if (response.status === 200) {
-            window.location.href = "/category";
+            window.location.href = "/documents";
           }
         });
       };
   
-      const postDocumentData = async (categoryData) => {
+      const postDocumentData = async (documentsData) => {
         const { accessToken } = JSON.parse(localStorage.getItem("tokens"));
   
-        const response = await fetch("/api/v1/document/create-docuement", {
+        const response = await fetch("/api/v1/document/add-document", {
           method: "POST",
           headers: {
             Authorization: `Bearer ${accessToken}`,
           },
-          body: categoryData,
+          body: documentsData,
         });
         return response;
       };
